{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 40,
  "lineage": "09cd0ed0-4a82-0081-b544-8a720964bbf4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "task-4-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c336727ce47bd754",
            "domain": "vpc",
            "id": "eipalloc-09982f5c2cb3666f3",
            "network_interface": "eni-041a2a89bcd12002d",
            "private_dns": "ip-192-168-1-236.ap-south-1.compute.internal",
            "private_ip": "192.168.1.236",
            "public_dns": "ec2-15-207-8-82.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.8.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Task-4 EIP "
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.task-4-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:964745870063:instance/i-0e2d2a1430eabef1b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2d2a1430eabef1b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06320934befba7fca",
            "private_dns": "ip-192-168-2-170.ap-south-1.compute.internal",
            "private_ip": "192.168.2.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0185a20a25e3b910f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072e3061200448f0f",
            "tags": {
              "Name": "mysqlec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06e504f37e3aea06d"
            ]
          },
          "dependencies": [
            "aws_security_group.private-sg",
            "aws_subnet.subnet-1a-private",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:964745870063:instance/i-056789f2875274bcb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056789f2875274bcb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f30dcf310284b4db",
            "private_dns": "ip-192-168-1-74.ap-south-1.compute.internal",
            "private_ip": "192.168.1.74",
            "public_dns": "ec2-13-234-118-86.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.118.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f5693aefbc6a539c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075093f71f8ee5753",
            "tags": {
              "Name": "wordpressec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3cbae9eb6cce59e"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task-4-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:internet-gateway/igw-01f6aa29616914e40",
            "id": "igw-01f6aa29616914e40",
            "owner_id": "964745870063",
            "tags": {
              "Name": "My task-4 VPC Internet Gateway"
            },
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "task-4-NATgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09982f5c2cb3666f3",
            "id": "nat-0a473bc188c1a0fb1",
            "network_interface_id": "eni-041a2a89bcd12002d",
            "private_ip": "192.168.1.236",
            "public_ip": "15.207.8.82",
            "subnet_id": "subnet-075093f71f8ee5753",
            "tags": {
              "Name": "task-4 NAT"
            }
          },
          "dependencies": [
            "aws_eip.task-4-eip",
            "aws_internet_gateway.task-4-igw",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0da424ee0831ae835",
            "owner_id": "964745870063",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f6aa29616914e40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_internet_gateway.task-4-igw",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc4a8aa6adac8ef2",
            "owner_id": "964745870063",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a473bc188c1a0fb1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-ngw"
            },
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_nat_gateway.task-4-NATgw",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42c3944000fd9d6",
            "route_table_id": "rtb-0fc4a8aa6adac8ef2",
            "subnet_id": "subnet-072e3061200448f0f"
          },
          "dependencies": [
            "aws_eip.task-4-eip",
            "aws_internet_gateway.task-4-igw",
            "aws_nat_gateway.task-4-NATgw",
            "aws_route_table.route-table-ngw",
            "aws_subnet.subnet-1a-private",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0782a18132071eb",
            "route_table_id": "rtb-0da424ee0831ae835",
            "subnet_id": "subnet-075093f71f8ee5753"
          },
          "dependencies": [
            "aws_internet_gateway.task-4-igw",
            "aws_route_table.route-table-igw",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:security-group/sg-06e504f37e3aea06d",
            "description": "private Mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e504f37e3aea06d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-sg",
            "name_prefix": null,
            "owner_id": "964745870063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "private Mysql",
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:security-group/sg-0d3cbae9eb6cce59e",
            "description": "public wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3cbae9eb6cce59e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "public-sg",
            "name_prefix": null,
            "owner_id": "964745870063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "public wordpress",
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:subnet/subnet-072e3061200448f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-072e3061200448f0f",
            "map_public_ip_on_launch": false,
            "owner_id": "964745870063",
            "tags": {
              "Name": "subnet-1b-private"
            },
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:subnet/subnet-075093f71f8ee5753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-075093f71f8ee5753",
            "map_public_ip_on_launch": true,
            "owner_id": "964745870063",
            "tags": {
              "Name": "subnet-1a-public"
            },
            "vpc_id": "vpc-04a2f4413ff0888ac"
          },
          "dependencies": [
            "aws_vpc.task-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:vpc/vpc-04a2f4413ff0888ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-028cc90cb43967e14",
            "default_route_table_id": "rtb-065ec1b34c6a1d5f5",
            "default_security_group_id": "sg-05232af952bdf3fef",
            "dhcp_options_id": "dopt-6c9f6407",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04a2f4413ff0888ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-065ec1b34c6a1d5f5",
            "owner_id": "964745870063",
            "tags": {
              "Name": "task-4"
            }
          }
        }
      ]
    }
  ]
}